--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
 	"useTabs": true,
 	"singleQuote": false,
 	"semi": false,
-	"trailingComma": "none",
+	"trailingComma": "es5",
 	"arrowParens": "avoid",
 	"endOfLine": "auto"
 }
