--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@react-navigation/native": "^6.1.4",
+		"@react-navigation/native-stack": "^6.9.10",
 		"@reduxjs/toolkit": "^1.7.0",
 		"eslint-plugin-ft-flow": "^2.0.3",
 		"react": "18.2.0",
 		"react-native": "0.71.3",
+		"react-native-pager-view": "^6.1.4",
 		"react-native-safe-area-context": "^4.5.0",
+		"react-native-screens": "^3.20.0",
+		"react-native-vector-icons": "^9.2.0",
 		"react-redux": "^7.2.6"
 	},
 	"devDependencies": {
@@ -22,22 +27,39 @@
 		"@babel/preset-env": "^7.20.0",
 		"@babel/runtime": "^7.20.0",
 		"@react-native-community/eslint-config": "^3.2.0",
-		"@tsconfig/react-native": "^2.0.2",
-		"@types/jest": "^29.2.1",
-		"@types/react": "^18.0.24",
-		"@types/react-test-renderer": "^18.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
+		"babel-eslint": "^10.1.0",
 		"babel-jest": "^29.2.1",
-		"eslint": "^8.19.0",
+		"eslint": "^8.34.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-google": "^0.14.0",
 		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-config-xo": "^0.43.1",
+		"eslint-config-xo-typescript": "^0.56.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-n": "^15.6.1",
 		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-native": "^4.0.0",
 		"husky": ">=6",
 		"jest": "^29.2.1",
 		"lint-staged": ">=10",
 		"metro-react-native-babel-preset": "0.73.7",
 		"prettier": "2.5.1",
-		"react-test-renderer": "18.2.0"
+		"prettier-eslint": "^15.0.1",
+		"react-test-renderer": "18.2.0",
+		"typescript": "^4.9.5"
 	},
 	"jest": {
 		"preset": "react-native"
+	},
+	"lint-staged": {
+		"*.js": "eslint --cache --fix",
+		"*.{js,css,md}": "prettier --write"
 	}
 }
